--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.2",
+    "moment": "^2.22.2",
     "mongoose": "^5.1.4",
     "morgan": "^1.9.0",
+    "node-fetch": "^2.1.2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
@@ -29,7 +31,6 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
-    "mocha": "^5.2.0",
-    "moment": "^2.22.2"
+    "mocha": "^5.2.0"
   }
 }
